<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/toolbar"
        style="@style/MyToolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_size"
        android:background="@drawable/gradient"
        android:minHeight="@dimen/action_bar_size"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="0dp"

            android:fontFamily="@font/productsans_regular"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/toolbarTimetableExample"
            android:textAlignment="center"
            android:textColor="@color/icon_tint_light"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageButton
            android:id="@+id/image_button_select_week"
            android:layout_width="24dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/imageButtonSelectWeek"
            android:tint="@color/icon_tint_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/toolbar_title"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_down"
            tools:layout_editor_absoluteY="16dp" />


        <ImageButton
            android:id="@+id/imageButtonBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/imageButtonMore"
            android:tint="@color/icon_tint_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_more_vert" />
    </android.support.constraint.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollViewVertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="0dp">

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <!-- 488dp = 66 * 7 + 29 -->
            <!-- 716dp = 45 * 15 + 41 -->
            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="@dimen/timetable_header_layout_width"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/timetable_time_row_header_width"
                    android:background="@color/timetable_column"
                    android:orientation="horizontal"
                    app:layout_column="1"
                    app:layout_columnSpan="7"
                    app:layout_row="0">

                    <TextView
                        android:id="@+id/text_view_monday"
                        android:layout_width="@dimen/timetable_header_width"
                        android:layout_height="@dimen/timetable_column_header_height"
                        android:fontFamily="@font/productsans_regular"
                        android:gravity="center"
                        android:text="@string/TimetableHeaderMonday"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/text_view_tuesday"
                        android:layout_width="@dimen/timetable_header_width"
                        android:layout_height="@dimen/timetable_column_header_height"
                        android:fontFamily="@font/productsans_regular"
                        android:gravity="center"
                        android:text="@string/TimetableHeaderTuesday"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/text_view_wednesday"
                        android:layout_width="@dimen/timetable_header_width"
                        android:layout_height="@dimen/timetable_column_header_height"
                        android:fontFamily="@font/productsans_regular"
                        android:gravity="center"
                        android:text="@string/TimetableHeaderWednesday"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/text_view_thursday"
                        android:layout_width="@dimen/timetable_header_width"
                        android:layout_height="@dimen/timetable_column_header_height"
                        android:fontFamily="@font/productsans_regular"
                        android:gravity="center"
                        android:text="@string/TimetableHeaderThursday"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/text_view_friday"
                        android:layout_width="@dimen/timetable_header_width"
                        android:layout_height="@dimen/timetable_column_header_height"
                        android:fontFamily="@font/productsans_regular"
                        android:gravity="center"
                        android:text="@string/TimetableHeaderFriday"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/text_view_saturday"
                        android:layout_width="@dimen/timetable_header_width"
                        android:layout_height="@dimen/timetable_column_header_height"
                        android:fontFamily="@font/productsans_regular"
                        android:gravity="center"
                        android:text="@string/TimetableHeaderSaturday"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/text_view_sunday"
                        android:layout_width="@dimen/timetable_header_width"
                        android:layout_height="@dimen/timetable_column_header_height"
                        android:fontFamily="@font/productsans_regular"
                        android:gravity="center"
                        android:text="@string/TimetableHeaderSunday"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/timetable_column"
                    android:orientation="vertical"
                    app:layout_column="0"
                    app:layout_row="1"
                    app:layout_rowSpan="15">

                    <TextView
                        android:layout_width="@dimen/timetable_time_row_header_width"
                        android:layout_height="wrap_content"
                        android:height="@dimen/timetable_column_header_height"
                        android:fontFamily="@font/robotomedium"
                        android:text=""
                        android:textAlignment="center"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="@dimen/timetable_time_row_header_width"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill_horizontal"
                        android:height="@dimen/timetable_time_row_header_height"
                        android:fontFamily="@font/productsans_regular"
                        android:text="@string/Time8"
                        android:textAlignment="center"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="@dimen/timetable_time_row_header_width"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill_horizontal"
                        android:height="@dimen/timetable_time_row_header_height"
                        android:fontFamily="@font/productsans_regular"
                        android:text="@string/Time9"
                        android:textAlignment="center"
                        android:textSize="12sp" />

                    <TextView

                        android:layout_width="@dimen/timetable_time_row_header_width"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill_horizontal"
                        android:height="@dimen/timetable_time_row_header_height"
                        android:fontFamily="@font/productsans_regular"
                        android:text="@string/Time10"
                        android:textAlignment="center"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="@dimen/timetable_time_row_header_width"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill_horizontal"
                        android:height="@dimen/timetable_time_row_header_height"
                        android:fontFamily="@font/productsans_regular"
                        android:text="@string/Time11"
                        android:textAlignment="center"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="@dimen/timetable_time_row_header_width"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill_horizontal"
                        android:height="@dimen/timetable_time_row_header_height"
                        android:fontFamily="@font/productsans_regular"
                        android:text="@string/Time12"
                        android:textAlignment="center"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="@dimen/timetable_time_row_header_width"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill_horizontal"
                        android:height="@dimen/timetable_time_row_header_height"
                        android:fontFamily="@font/productsans_regular"
                        android:text="@string/Time13"
                        android:textAlignment="center"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="@dimen/timetable_time_row_header_width"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill_horizontal"
                        android:height="@dimen/timetable_time_row_header_height"
                        android:fontFamily="@font/productsans_regular"
                        android:text="@string/Time14"
                        android:textAlignment="center"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="@dimen/timetable_time_row_header_width"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill_horizontal"
                        android:height="@dimen/timetable_time_row_header_height"
                        android:fontFamily="@font/productsans_regular"
                        android:text="@string/Time15"
                        android:textAlignment="center"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="@dimen/timetable_time_row_header_width"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill_horizontal"
                        android:height="@dimen/timetable_time_row_header_height"
                        android:fontFamily="@font/productsans_regular"
                        android:text="@string/Time16"
                        android:textAlignment="center"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="@dimen/timetable_time_row_header_width"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill_horizontal"
                        android:height="@dimen/timetable_time_row_header_height"
                        android:fontFamily="@font/productsans_regular"
                        android:text="@string/Time17"
                        android:textAlignment="center"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="@dimen/timetable_time_row_header_width"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill_horizontal"
                        android:height="@dimen/timetable_time_row_header_height"
                        android:fontFamily="@font/productsans_regular"
                        android:text="@string/Time18"
                        android:textAlignment="center"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="@dimen/timetable_time_row_header_width"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill_horizontal"
                        android:height="@dimen/timetable_time_row_header_height"
                        android:fontFamily="@font/productsans_regular"
                        android:text="@string/Time19"
                        android:textAlignment="center"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="@dimen/timetable_time_row_header_width"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill_horizontal"
                        android:height="@dimen/timetable_time_row_header_height"
                        android:fontFamily="@font/productsans_regular"
                        android:text="@string/Time20"
                        android:textAlignment="center"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="@dimen/timetable_time_row_header_width"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill_horizontal"
                        android:height="@dimen/timetable_time_row_header_height"
                        android:fontFamily="@font/productsans_regular"
                        android:text="@string/Time21"
                        android:textAlignment="center"
                        android:textSize="12sp" />

                </LinearLayout>


                <RelativeLayout
                    android:id="@+id/relativeLayoutInnerContent"
                    android:layout_width="@dimen/timetable_container_width"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/timetable_time_row_header_width"
                    android:layout_marginTop="@dimen/timetable_column_header_height">

                </RelativeLayout>

                <View
                    android:id="@+id/timeIndicator"
                    android:layout_width="8dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="#F44336" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/relativeLayoutInnerContent"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="238dp"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="524dp"
                    android:text="Button" />
            </RelativeLayout>
        </HorizontalScrollView>
    </ScrollView>
</RelativeLayout>